@@ -1,5 +1,6 @@
 package enterprise.elroi.services.serviceImplementation.userServiceImpl;
 
+import at.favre.lib.crypto.bcrypt.BCrypt;
 import enterprise.elroi.data.model.User;
 import enterprise.elroi.data.repository.UserRepository;
 import enterprise.elroi.dto.requests.UserRequest;
@@ -10,9 +11,7 @@ import enterprise.elroi.utils.mapper.UserMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class UserServiceImpl implements UserServiceInterface {
@@ -28,14 +27,15 @@ public class UserServiceImpl implements UserServiceInterface {
 
     @Override
     public UserResponse createAndLinkParent(UserRequest request, String childId) {
-        // Ensure the role is set to PARENT
         request.setRole("PARENT");
         request.setLinkedChildId(childId);
 
         User user = userMapper.toUser(request);
-        // Note: Password hashing should be handled here or in AuthServiceImpl
-        // depending on your preference. Assuming AuthServiceImpl handles the "Registration"
-        // flow, this method focuses on the Linkage.
+
+        if (request.getPassword() != null && !request.getPassword().isBlank()) {
+            String hashedPassword = BCrypt.withDefaults().hashToString(12, request.getPassword().toCharArray());
+            user.setPassword(hashedPassword);
+        }
 
         User savedUser = userRepository.save(user);
         return userMapper.toUserResponse(savedUser);
@@ -45,23 +45,23 @@ public class UserServiceImpl implements UserServiceInterface {
     public List<UserResponse> getAllUsers() {
         return userRepository.findAll().stream()
                 .map(userMapper::toUserResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public UserResponse findUserByEmail(String email) {
-        User user = (User) userRepository.findByEmail(email)
+
+        User user = userRepository.findByEmail(email)
                 .orElseThrow(() -> new UserNotFoundException("User not found with email: " + email));
         return userMapper.toUserResponse(user);
     }
 
     @Override
     public UserResponse getLinkedParentData(String childId) {
-        // Find the user who has this specific childId in their list
         return userRepository.findAll().stream()
-                .filter(user -> user.getChildrenIds().contains(childId))
+                .filter(user -> user.getChildrenIds() != null && user.getChildrenIds().contains(childId))
                 .findFirst()
                 .map(userMapper::toUserResponse)
-                .orElseThrow(() -> new RuntimeException("No parent linked to this child"));
+                .orElseThrow(() -> new RuntimeException("No parent linked to this child: " + childId));
     }
 }
